# exact_cover

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.py  debug.py  dev_requirements.txt  examples.md  helpers.py  poetry.toml  pyproject.toml  run_tests.py
.github/workflows/: c-build_from_makefile.yml  c-cpp.yml  c-tests.yml  docker-build.yml  poetry-check-sdist-win.yml  poetry-check-sdist.yml  poetry-publish-manual.yml  poetry-publish-sdist.yml  poetry-publish.yml  poetry-quick-test.yml  poetry-test.yml  python-build.yml  python-package.yml  python-validate.yml  valgrind.yml
data/: debug_data
docker_config/: Dockerfile
exact_cover/: __init__.py  dummy.py  error.py  exact_cover_np.c  helpers.py  io.py  setup.py  utils.py  wrapper.py
exact_cover_np/: .gitignore  exact_cover_np.c  setup.py
exact_cover_np/sudoku_solver/: sudoku.py
examples/: insight.csv
src/: debug.h  dlx.c  dlx.h  exact_cover.c  quad_linked_list.c  quad_linked_list.h  sparse_matrix.c  sparse_matrix.h  sudoku.py
tests/: .gitignore  bruteforce.py  con2.csv  con4.csv  config.py  data.py  mem_burn.py  polyomino_data.py  problems.py  requirements.txt  test_all_solutions.py  test_c_suite.c  test_count_solutions.py  test_debug.py  test_debug_algo.c  test_debug_mode.py  test_dlx.c  test_exact_cover.py  test_exact_cover_problems.py  test_get_all_solutions.py  test_helpers.py  test_io.py  test_legacy_dlx.c  test_m_dlx.c  test_m_sparse_matrix.c  test_quad_linked_list.c  test_solution_count.py  test_sparse_matrix.c  test_sparse_matrix_2.c  test_sudoku.py  test_sudoku_based.py  test_trimino_based.py  test_wrapper.py
tests/files/: cylinder.csv  impossible_sudoku.csv  part_reduced.csv  pentominos_chessboard.csv  problem_0003.csv  reduced.csv  small_empty_sudoku.csv  small_sudoku.csv  small_trimino_problem.npy  tiny_cover_problem.npy  very-hard.csv
tests/helpers/: sudoku.py
tests/sudoku_solver/: sudoku.py
tools/: debug.py  helpers.py  run_tests.py
