[tool.poetry]
name = "exact_cover"
version = "1.2.0"
description = "Solve exact cover problems"
readme = "README.md"
authors = ["Moy Easwaran"]
maintainers = ["Jack Grahl <jack.grahl@gmail.com>"]
homepage = "https://github.com/jwg4/exact_cover"
repository = "https://github.com/jwg4/exact_cover"
license = "GPL-2.0-only"
include = [
    {path = "src/*.c", format = "sdist"},
    {path = "src/*.h", format = "sdist"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
numpy = [
    {version = ">=1.20", python = ">=3.7,<3.10"},
    {version = ">=1.23", python = ">=3.10"}
]
setuptools = ">=51.1.2"

[tool.poetry.dev-dependencies]
hypothesis = ">=6.56.3"
pytest = ">=6.1.2"
flake8 = ">=4.0"
black = ">=22.3.0"
valgrindci = ">=0.2.0"
pytest-fail-slow = ">=0.3.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
test = 'tools.run_tests:test'
quicktest = 'tools.run_tests:quicktest'
doctest = 'tools.run_tests:run_doctest'
debug = 'tools.debug:run_debug'
parse_valgrind = 'tools.debug:parse_valgrind_results'

[build-system]
requires = ["setuptools", "numpy>=1.20.1", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "polyomino_data"
